package Tracker;

message Login{
    required string NodeId = 1;
    optional string LoginIp = 2;
    optional int32 MessagePort = 3;
}

message Logout{
    required string NodeId = 1;
}

message QueryPeer{
    required string FileId = 1;
    optional int32 NeedCount = 2;
}

message Peer{
    required string Ip = 1;
    required int32 MessagePort = 2;

    enum OwnType{
        COMPLETE = 1;
        DOWNLOADING = 2;
    }

    required OwnType type = 3;
}

message QueryPeerReply{
    required string FileId = 1;
    repeated Peer PeerList = 2;
}

message DownloadComplete{
    required string FileId = 1;
    required string NodeId = 2;
}
